@@ -11,6 +11,11 @@ Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "NHibernate.Validator.Specif
 EndProject
 Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "NHibernate.Validator.Specific.Tests", "NHibernate.Validator.Specific.Tests\NHibernate.Validator.Specific.Tests.csproj", "{36608B70-0854-42CE-9A18-AB97D42C543B}"
 EndProject
+Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Solution Items", "Solution Items", "{EB94F7F7-51F2-4D8A-B0BD-427586AA4BB0}"
+	ProjectSection(SolutionItems) = preProject
+		..\releasenotes.txt = ..\releasenotes.txt
+	EndProjectSection
+EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
 		Debug|Any CPU = Debug|Any CPU
